# turbocharger-template-svelte

./: .gitignore  App.svelte  Cargo.toml  README.md  package.json  tailwind.config.js  tsconfig.json  web-test-runner.config.js
.github/workflows/: ci.yml
src/: backend.rs  main.rs  server.rs
src-frontend/: App.svelte
src-frontend/tests/: turbocharger.test.js
