[package]
edition = "2021"
name = "turbocharger-template"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "turbocharger_generated"
path = "src/wasm.rs"

[[bin]]
name = "turbocharger-template"
path = "src/server.rs"

[dependencies]
# dependencies for both server and wasm
tracked = "0.5"
turbocharger = {version = "0.3", features = ["full"]}
turbosql = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# dependencies for wasm only
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
clap = {version = "3", features = ["derive"]}
log = "0.4"
opener = "0.5"
pretty_env_logger = "0.4"
rust-embed = "6"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
